--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <meta property="og:url" content="https://justdancewpi.github.io/just-dance-catalog/">
     <meta property="og:title" content="Just Dance Query | Queue up your songs for some of Goat's Head Restaurant's event!">
     <meta property="og:description" content="A free Just Dance app used for querying song into a Google Sheets spreadsheets for WPI students. Presented by Goat's Head Restaurant, funded by SGA | Come dance and have fun!">
-    <meta property="og:image" content="img/jdcover.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/JustDanceWPI/just-dance-catalog/master/img/jdcover.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://justdancewpi.github.io/just-dance-catalog/">
     <meta property="twitter:title" content="Just Dance Query | Queue up your songs for some of Goat's Head Restaurant's event!">
     <meta property="twitter:description" content="A free Just Dance app used for querying song into a Google Sheets spreadsheets for WPI students. Presented by Goat's Head Restaurant, funded by SGA | Come dance and have fun!">
-    <meta property="twitter:image" content="img/jdcover.png">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/JustDanceWPI/just-dance-catalog/master/img/jdcover.png">
 
     <meta name="keywords" content="Just Dance, Unlimited, Catalog, WPI, Goat's Head">
     <meta name="author" content="Panhavuth Lau">
