fixing some viewport mistakes

--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
 
     </div>
 </header>
-<!--Search bar-->
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Is this the song you wanted?</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Submit this song for queue?</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -68,11 +66,12 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary btn-block">Yes</button>
+                <button type="button" class="btn btn-primary btn-block btn-confirm">Continue</button>
             </div>
         </div>
     </div>
 </div>
+<!-- Google Forms iframe -->
 <!--list of songs to be populated-->
 <ul id="songList" class="row">
 </ul>
