configure google forms embed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 <!-- Modal 2 -->
 <div class="modal fade" id="submitSongModal" tabindex="-1" role="dialog" aria-labelledby="submitSongModalTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document" style="max-width: 40vw; min-width: 500px">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="submitSongModalTitle">Submit this song for queue?</h5>
@@ -82,7 +82,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <iframe id="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSdSh_talpniBWAWFUA3DooVtuBHbAAhor1WTbl6P3NtfZnMJw/viewform?embedded=true" width="100%" height="868" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe id="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSdSh_talpniBWAWFUA3DooVtuBHbAAhor1WTbl6P3NtfZnMJw/viewform?embedded=true">Loading…</iframe>
             </div>
         </div>
     </div>
