--- a/display.html
+++ b/display.html
@@ -7,7 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <!-- custom scripts -->
-
+<script src="./javascript/displayData.js"></script>
 <link rel="icon" href="img/party.png" type="image/png">
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-<body onload="initListOfSongs()">
+<body>
+<div class="table">
+    <table class="flex-container">
+
+    </table>
+</div>
 
 </body>
 </html>
