--- a/display.html
+++ b/display.html
@@ -33,6 +33,7 @@
     <meta name="keywords" content="Just Dance, Unlimited, Catalog, WPI, Goat's Head">
     <meta name="author" content="Panhavuth Lau">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="10"/>
 
 </head>
 <body>
