--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <!-- custom scripts -->
-<script src="javascript/UnlimitedCatalog.js"></script>
 <script src="javascript/songSearch.js"></script>
 <script src="javascript/songLoad.js"></script>
+<script src="javascript/displayData.js"></script>
 
 <link rel="icon" href="img/party.png" type="image/png">
 <head>
@@ -38,7 +38,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-<body onload="initListOfSongs()">
+<body>
+
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- Image and text -->
@@ -82,7 +83,7 @@
 
     </div>
 </header>
-<!-- Modal 1 -->
+<!-- Confirmation screen -->
 <div class="modal fade" id="selectSongModal" tabindex="-1" role="dialog" aria-labelledby="selectSongModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -130,9 +131,10 @@
         </div>
     </div>
 </div>
-
 <!--list of songs to be populated-->
 <ul id="songList" class="row">
 </ul>
+<script src="https://spreadsheets.google.com/feeds/list/17GyOOWi7aNLgscGYXgpzWIPZGMb3w5fD6CIGu677Mck/1/public/values?alt=json-in-script&callback=importGSS"
+         onload="initListOfSongs()"></script>
 </body>
 </html>
