--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 </head>
 <body>
-
+<!-- Navigation bar and search bar -->
 <header>
+<!--  Navigation bar  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- Image and text -->
         <nav class="navbar navbar-light bg-light">
@@ -78,8 +79,9 @@
             </form>
         </div>
     </nav>
+<!--   Search bar     -->
     <div class="search-bar">
-        <label for="searchInput"></label><input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="searchFunction()" placeholder="Search">
+        <label for="searchInput"></label><input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="onSearchKeyPress(event)" placeholder="Search">
 
     </div>
 </header>
