--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
     </nav>
 <!--   Search bar     -->
     <div class="search-bar">
-        <label for="searchInput"></label><input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="onSearchKeyPress(event)" placeholder="Search">
+        <label for="searchInput"></label>
+        <input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="searchFunction()" placeholder="Search">
+        <div></div>
 
     </div>
 </header>
@@ -103,7 +105,7 @@
                     <div class="form-row">
                     <div class="form-group col">
                         <label for="nameInput">Name of group or individual</label>
-                        <input name="entry.287909225" type="text" class="form-control" id="nameInput" aria-describedby="nameHelp" placeholder="Enter name">
+                        <input name="entry.287909225" type="text" class="form-control" id="nameInput" aria-describedby="nameHelp" placeholder="Enter name" required>
                         <small id="nameHelp" class="form-text text-muted">In case two similar songs are posted</small>
                     </div>
                     <div class="form-group col">
