fixing the search lag by limiting the search to 25, then progressively unhides elements when scrolling past a threshold

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!--   Search bar     -->
     <div class="search-bar">
         <label for="searchInput"></label>
-        <input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="searchFunction()" placeholder="Search">
+        <input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="searchFunction(25, true)" placeholder="Search">
         <div></div>
 
     </div>
