temporary styling solution

--- a/index.html
+++ b/index.html
@@ -42,50 +42,14 @@
 <!-- Navigation bar and search bar -->
 <header>
 <!--  Navigation bar  -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- Image and text -->
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-                <img src="./img/party.png" width="40" height="40" class="d-inline-block align-top" alt="">
-                Bootstrap
-            </a>
-        </nav>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
 <!--   Search bar     -->
-    <div class="search-bar">
-        <label for="searchInput"></label>
-        <input type="text" name="search" value="" autocomplete="off" id="searchInput" onkeyup="searchFunction(25, true)" placeholder="Search">
-        <div></div>
-
-    </div>
+    <form>
+        <div class="search-bar">
+            <label for="searchInput"></label>
+            <input type="text" name="search" value="Just Dance" autocomplete="off" id="searchInput" onkeyup="searchFunction(20, true)" placeholder="Search">
+            <div></div>
+        </div>
+    </form>
 </header>
 <!-- Confirmation screen -->
 <div class="modal fade" id="selectSongModal" tabindex="-1" role="dialog" aria-labelledby="selectSongModalTitle" aria-hidden="true">
@@ -140,5 +104,8 @@
 </ul>
 <script src="https://spreadsheets.google.com/feeds/list/17GyOOWi7aNLgscGYXgpzWIPZGMb3w5fD6CIGu677Mck/1/public/values?alt=json-in-script&callback=importGSS"
          onload="initListOfSongs()"></script>
+<script>
+    searchFunction(25, true);
+</script>
 </body>
 </html>
