--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <!--   Search bar     -->
     <form>
         <div class="search-bar">
+            <span class="fa fa-search"></span>
             <label for="searchInput"></label>
-            <input type="text" name="search" value="Just Dance" autocomplete="off" id="searchInput" onkeyup="searchFunction(20, true)" placeholder="Search">
-            <div></div>
+            <input type="text" name="search" value="Just Dance" autocomplete="off" id="searchInput" onkeyup="searchFunction(20, true)" placeholder="Search by name, artist, or difficulty">
         </div>
     </form>
 </header>
