--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="javascript/songSearch.js"></script>
 <script src="javascript/songLoad.js"></script>
 <script src="javascript/displayData.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.es6.min.js"></script>
 
 <link rel="icon" href="img/party.png" type="image/png">
 <head>
