--- a/display.html
+++ b/display.html
@@ -37,9 +37,17 @@
 
 </head>
 <body>
-<div class="table">
-    <table class="flex-container">
-
+<div>
+    <table class="table table-striped table-light">
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>Name</th>
+                <th>Song</th>
+                <th>Score</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
     </table>
 </div>
 
