Should take care of the song title clipping on mobile devices

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 <header class="sticky-top">
     <form>
         <div class="search-bar navbar sticky-top position-sticky">
-            <span class="fa fa-search" id="searchButton" style="padding-left: 2rem;"></span>
+            <a href="#searchIcon" title="Search" id="searchIcon" class="navbar-item"><span class="fa fa-search button" id="searchButton"></span></a>
             <label for="searchInput"></label>
             <input type="text" name="search" autocomplete="off" id="searchInput" value="" placeholder="Search by name, artist, or difficulty" onkeyup="searchFunction(20, true)">
-            <span class="fa fa-bars" style="padding-right: 2rem;"></span>
+            <a href="#menuIcon" title="Menu" id="menuIcon" class="navbar-item"><span class="fa fa-bars" ></span></a>
         </div>
     </form>
 </header>
